--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ timezone:
 SEOTitle: Just Cooking
 email: justcooking202@gmail.com
 description: "recipes and cooking"
-keyword: "dusign, hexo-theme-snail"
+keyword: "cooking, cook, justcooking, recipes, recipe, bbq, chef, chefcook, fun, funny, food, meal, yummey, ketchin"
 header-img: img/header_img/Wallpaper Greek, cooking, recipe, lettuce, tomatoes, paprika, olives, feta, 4k, Food 1343218940.jpg
 signature: true #show signature
 signature-img: img/signature/Just-Cooking-Logo.png
