--- a/_config.yml
+++ b/_config.yml
@@ -239,8 +239,8 @@ bg_effects:
 ## light , dark or star
 ## If you set the value of the `color_theme` to `dark`, set the value of the `highlight_theme` to `night` in `/theme/snail/config.yml`
 ## `mouse_control` is only valid for star themes
-color_theme: dark
-mouse_control: false
+color_theme: star
+mouse_control: true
 
 # Visitor statistics
 visitor:
